Update script source path in index.html

--- a/index.html
+++ b/index.html
@@ -22,6 +22,6 @@
   <body>
     <div id="root"></div>
     <!-- CRITICAL: This script tag links your HTML to your React code -->
-    <script type="module" src="/index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
